--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./styles/index.css">
   </head>
   <body>
     <h1>💖 Hello World!</h1>
     <p>Welcome to your Electron application.</p>
+    <script src="./source.js"></script>
   </body>
 </html>
